Improve control styles pane look&feel. Fixed alignment.

--- a/app/style/vargin.scss
+++ b/app/style/vargin.scss
@@ -88,3 +88,12 @@ vargin-range > input,
 vargin-container > div {
   @include flex;
 }
+
+.vargin-property-editor {
+  @include flexbox;
+  @include align-content(space-between);
+}
+
+.vargin-property-editor__label {
+  @include flex(1);
+}
